International Popup bundle price UI and Avoid large layout shifts

--- a/src/app/accounts/pages/account-international-topup/account-international-topup.component.scss
+++ b/src/app/accounts/pages/account-international-topup/account-international-topup.component.scss
@@ -600,11 +600,14 @@ td {
               }
           }
       }
+      ul {
+        padding-left: 25px;
+      }
       button.buy_btn {
           background: #f4cb26;
           border: none;
           font-weight: 600;
-          padding: 5px 26px;
+          padding: 8px 30px;
           border-radius: 20px;
           text-transform: uppercase;
       }
