--- a/src/app/accounts/pages/account-recharge/account-recharge.component.scss
+++ b/src/app/accounts/pages/account-recharge/account-recharge.component.scss
@@ -206,7 +206,7 @@ h3.selectRechg {
   line-height: 1.3;
   background: #333;
   color: #fff;
-  padding: 13px;
+  padding: 10px 13px;
   font-size: 13px;
   border-radius: 10px;
   position: absolute;
